# aaniohjattuiotjarjestelma

./: .gitignore  README.md
c-integration/: .clang-format  .gitignore  CMakeLists.txt  main.cpp
c-integration/include/: weights_map.h
c-integration/libs/: CMakeLists.txt
c-integration/libs/libFFTi/: FFTi.c  FFTi.h
c-integration/libs/libFFTr/: FFTr.h  preprocessed_track.txt
c-integration/src/: common.c  common.h  main.c  model.c  model.h
c-integration/src/layers/: conv1.c  conv1.h  conv2d.c  conv2d.h  dense.c  dense.h  maxpooling2d.c  maxpooling2d.h  resizing.c  resizing.h  toinenkonvoluutio.c  toinenkonvoluutio.h
c-integration/src/weights/: weight_tensors.c  weight_tensors.h
c-tests/: CMakeLists.txt  compile_commands.json  main.bak.cpp
c-tools/: CMakeLists.txt  hasher.c  hasher.h  headergen.c  headergen.h  layer.toml  layerparser.c  layerparser.h  main.c  serial.c
c-tools/include/: floattype.h  headergen.h  layer.h  layerparser.h  serial.h
c-toteutus/: common.h  conv1.c  conv1_test.c  main.c
c-toteutus/normalisaatio/: normalisaatio.c  normalisaatio.h  normalisaatio_testaus.c
c-toteutus/resizing/: resizing_test.c
datan_nauhoitus/: datan_nauhoitus.py
python-toteutus/: Muistiinpanot.txt
python-toteutus/FFT/FFT/: FFTmanual.py  extract_example_audio_track_data.py  firstFFT_with_FourierTramsfer_from_numpy_spectrogramIncluded_.py  firstFFT_with_FourierTransfer_from_numpy_spectrogramIncluded_.py
python-toteutus/conv2d_toinen/: ToinenKonvoluutio.py
python-toteutus/convo2d1/: convo2d1.py  convo2d1_test.py
python-toteutus/maxpooling2d/: maxpooling2d.py
python-toteutus/model/: README.md
python-toteutus/normalization/: ex_ds_after_norm.npy  ex_ds_after_resize.npy  normalization.py
python-toteutus/src/: c_header.py  dense.py  model_io.py
python-toteutus/väliaikainen-word-tiedosto/: Audio_CNN_version_alpha_000000001.docx
raspi/Test/: CMakeLists.txt  main.cpp
raspi/Test/include/: weights_map.h
raspi/Test/libs/libFFTr/zephyr/: module.yaml
raspi/Test/src/: common.h  main.c  model.c  sample.h
raspi/Test/src/layers/: conv2d.c  maxpooling2d.c  normalisaatio.c  toinenkonvoluutio.c  toinenkonvoluutio.h
thingy53-toteutus/: muistiinpanot.txt
thingy53-toteutus/FFT/: FFTmanual.c  FFTmanual_recursive.c
thingy53-toteutus/FFT/libFFTi/: FFTi.c  FFTi.h  sample.c
thingy53-toteutus/FFT/libFFTiFloat/: FFTi.c  FFTr.c  FFTr.h  sample.c
thingy53-toteutus/FFT/libFFTr/: FFTr.c  FFTr.h  sample.c
thingy53-toteutus/c-model/: .clang-format  .gitignore  CMakeLists.txt  prj.conf
thingy53-toteutus/c-model/include/: weights_map.h
thingy53-toteutus/c-model/libs/libFFTi/: FFTi.c  FFTi.h  sample.c
thingy53-toteutus/c-model/libs/libFFTr/: CMakeLists.txt  FFTr.c  FFTr.h  sample.c
thingy53-toteutus/c-model/libs/libFFTr/zephyr/: module.yaml
thingy53-toteutus/c-model/src/: common.c  common.h  main.c  model.c  sample.h
thingy53-toteutus/c-model/src/layers/: conv1.c  conv1.h  dense.c  normalisaatio.c  normalisaatio.h  resizing.c  resizing.h  toinenkonvoluutio.c  toinenkonvoluutio.h
thingy53-toteutus/c-model/src/qspi/: qspi.h  qspi.s
thingy53-toteutus/c-tests/: CMakeLists.txt  prj.conf
thingy53-toteutus/c-tests/src/: main.c
thingy53-toteutus/cpp-tests/: .clangd  CMakeLists.txt  prj.conf
thingy53-toteutus/cpp-tests/src/: main.cpp
thingy53-toteutus/matter/: Matter_OTBR_setup.odt  matter_otbr_setup.md
thingy53-toteutus/matter/coprocessor/: CMakeLists.txt  prj.conf
thingy53-toteutus/maxpooling2d/: maxpooling2d.c  maxpooling2d_final.c  testing  testing.c
thingy53-toteutus/pdmtest/: CMakeLists.txt  prj.conf
thingy53-toteutus/pdmtest/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp.overlay
thingy53-toteutus/petteri_toteutus/: README.MD
thingy53-toteutus/qspi/: CMakeLists.txt  prj.conf
thingy53-toteutus/toinen_konvoluutio/: toinenkonvoluutio.c  toinenkonvoluutio.h  toinenkonvoluutio_testaus.c
tools/: play-stream.py  pyproject.toml  read_serial.py  serial_audio.py
(+41 files in other folders)
